# prom2teams

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
etc/: prom2teams.conf  template.j2
prom2teams/: __main__.py  alert.py  card.py  configuration.py  connector.py  processor.py  server.py
test/: test_processor.py
test/test_processor/: alert.json
tests/: test_processor.py
