[metadata]
name = prom2teams
version = 0.0.1
summary = Redirects Prometheus AlertManager notifications to Microsoft Teams
description-file =
    README.md
author = Eurotech
author-email = no-reply@eurotech.com
classifier =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Topic :: Communications :: Chat
    License :: OSI Approved :: Apache Software License
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3

[files]
packages =
    prom2teams

[entry_points]
console_scripts =
    prom2teams = prom2teams.__main__:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
